# iloliconIDC-admin

./: .env.example  Cargo.toml  data.db
.github/workflows/: ci.yml
.gitlab/workflows/: ci.yml
database/: 20240301.sql
src/: api.rs  check.rs  db.rs  handler.rs  main.rs  route.rs
src/api/: login.rs
src/check/: install_mysql.rs  install_sqlite3.rs
