[package]
name = "ilolicon_idc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
rusqlite = "0.26.3"
tokio = { version = "1.26.0", features = ["full"] }
mysql = "24.0.0"
dotenv = "0.15.0"
ansi_term = "0.11.0"
chrono = { version = "0.4.24", features = ["serde"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tower-http = { version = "0.5.0", features = ["cors"] }
uuid = { version = "1.3.0", features = ["v4","serde"] }